--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,14 +10,12 @@
   <h1>TikTok Downloader</h1>
 
   <form id="mainForm" onsubmit="return false;">
-    <input type="text" id="videoUrl" placeholder="Paste TikTok video link here..." required />
-    <button type="button" class="paste-btn" onclick="pasteLink()">Paste</button>
+    <div class="input-group">
+      <input type="text" id="videoUrl" placeholder="Paste TikTok video link here..." required autocomplete="off" />
+      <button type="button" class="paste-btn" onclick="pasteLink()">Paste</button>
+      <button type="button" class="clear-btn" onclick="clearInput()" style="display:none;">Clear</button>
+    </div>
     <button type="button" class="fetch-btn" onclick="fetchLinks()">Download</button>
   </form>
-
-  <div id="preview" class="preview-container" style="display: none;">
-    <img id="videoThumb" src="" alt="Video Thumbnail" />
-    <h3 id="videoTitle"></h3>
-  </div>
 
   <div id="options"></div>
