--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>TikTok Downloader</title>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5298191242036107"
+     crossorigin="anonymous"></script>
   <style>
     * {
       box-sizing: border-box;
